2006-08-23  Wim Taymans  <wim@fluendo.com>

	* gnl/gnlobject.c: (gnl_object_class_init), (control_internal_pad),
	(gnl_object_ghost_pad_no_target):
	Add extra explanation for priority property, Fixes #352382.

2006-08-23  Wim Taymans  <wim@fluendo.com>

	* gnl/gnloperation.c: (gnl_operation_class_init),
	(element_is_valid_filter), (gnl_operation_add_element),
	(gnl_operation_set_sinks), (get_unused_static_sink_pad),
	(add_sink_pad), (gnl_operation_request_new_pad):
	Fix leaks in iterators.
	Correctly resync iterators too.

2006-08-18  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlobject.c: (internal_pad_finalizing),
	(control_internal_pad):
	Free internal pad private data when the pad is being finalized, else
	we leak that structure.

2006-08-18  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c:
	(gnl_composition_ghost_pad_set_target):
	Properly handle ghostpads without targets.
	(convert_list_to_tree), (compare_relink_single_node),
	(compare_deactivate_single_node), (update_pipeline):
	First integration of support for GnlOperations.
	(gnl_composition_add_object):
	If composition was empty and initialized, update pipeline.


2006-08-09  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlobject.c:
	Remove useless linkfunc/unlinkfunc from GnlPadPrivate structure.
	(control_internal_pad),
	Remove call to useless functions. 
	(gnl_object_ghost_pad_no_target),
	(gnl_object_ghost_pad_set_target):
	* gnl/gnloperation.c: (gnl_operation_class_init),
	(element_is_valid_filter), (gnl_operation_add_element),
	(gnl_operation_set_sinks), (get_unused_static_sink_pad),
	(add_sink_pad), (gnl_operation_request_new_pad),
	(gnl_operation_release_pad):
	Implemented GstElement::request_new_pad virtual method.
	Improved sink ghost pads synchronisation with the nbsinks property.
	* gnl/gnloperation.h:
	Added comments.

2006-07-27  Edward Hervey  <edward@fluendo.com>

	* gnl/gnl.c:
	Let's welcome GnlOperation back in the game.
	* gnl/gnlcomposition.c: (gnl_composition_init),